--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,3 +2,27 @@ Jen:
   name: Jen Example
   email: jen@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+
+Shackleton:
+  name: Shackleton Example
+  email: shackleton@example.com
+  password_digest: <%= User.digest('password1') %>
+
+boo:
+  name: Boo theCat
+  email: hands@example.gov
+  password_digest: <%= User.digest('password') %>
+  admin: true
+
+boostedboard:
+  name: Boosted Board
+  email: boss@example.gov
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
