time to screw up pictures

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,7 +6,7 @@ jen:
   activated: true
   activated_at: <%= Time.zone.now %>
 
-Shackleton:
+archer:
   name: Sterling Archer
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
